--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
         "axios": "^0.18",
         "bootstrap": "^4.1.0",
         "browser-sync": "^2.26.7",
-        "browser-sync-webpack-plugin": "^2.0.1",
+        "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^5.1",
         "gulp": "^4.0.2",
         "jquery": "^3.4.1",
-        "laravel-mix": "^4.0.16",
-        "lodash": "^4.17.15",
+        "laravel-mix": "^4.1.2",
+        "lodash": ">=4.17.13",
         "popper.js": "^1.12",
         "postcss-flexbugs-fixes": "^4.1.0",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
+        "sass": "^1.22.9",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10",
